Removed google api key from the Map component to prevent web scrapers from picking it up. Created a function that retrieves the google key from our private server when the App is mounted. The key is then passed as props from App.js to Quote.js ending with Map.js. I wrapped the render of Map.js (found in Quote.js) in a ternary statement that will return the Map only if the api-key props are present. If not, a transparent div is returned in order to keep the page style consistent. This also allows the Quote page to be refreshed without throwing errors.

--- a/src/App.scss
+++ b/src/App.scss
@@ -397,7 +397,11 @@ $grass: rgba(123, 158, 54, 1);
   height: calc(100vh - 160px);
   padding: 160px 2% 0px 2%;
 
-  .google-map {
+  .google-map-placeholder {
+    background-color: transparent;
+  }
+
+  .google-map, .google-map-placeholder {
     position: relative;
     width: 60%;
     height: 98%;
